manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cocreatews
  namespace: default
spec:
  ports:
    - name: app
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: cocreatews

  sessionAffinity: None
  type: ClusterIP
